<resources>
    <string name="add_allergies_button">Add Allergies</string>
    <string name="add_document_description_hint">Description (optional)</string>
    <string name="add_document_document_title_hint">Document Title</string>
    <string name="add_document_document_type_hint">Document Type</string>
    <string name="add_document_edit_button">Edit document</string>
    <string name="add_document_title">Add New Document</string>
    <string name="add_document_upload_button">Upload new document</string>
    <string name="add_new_allergy_title">Add New Allergy</string>
    <string name="add_new_allergy_top_hits">Top Hits</string>
    <string name="add_new_diagnoses_title">Add New Diagnoses</string>
    <string name="add_new_medicine_title">Add New Medicine</string>
    <string name="add_new_search_hint">Search</string>
    <string name="add_new_vaccines_title">Add New Vaccine</string>
    <string name="alarm_phone">Alarm Telephone</string>
    <string name="allergies_card_description">Let us know if you do have any allergies, or if you know that you don’t have any</string>
    <string name="allergies_card_title">Allergies</string>
    <string name="apple_button_title">with Apple</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_next">Next</string>
    <string name="button_share">Share</string>
    <string name="button_skip_tour">Skip Tour</string>
    <string name="button_translate">Translate</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="card_items_description">%1$s items: %2$s</string>
    <plurals name="card_reorder_period_title">
        <item quantity="one">Card can be reordered in %1d day</item>
        <item quantity="other">Card can be reordered in %1d days</item>
    </plurals>
    <string name="common_cancel">Cancel</string>
    <string name="common_dash">-</string>
    <string name="common_no">No</string>
    <string name="common_remove">Remove</string>
    <string name="common_save">Save</string>
    <string name="common_yes">Yes</string>
    <string name="complete_my_profile_button">Complete my profile</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="create_account_button">Create account</string>
    <string name="dashboard_screen_title_evening">&#128075;&#127995; Good evening</string>
    <string name="dashboard_screen_title_morning">&#128075;&#127995; Good morning</string>
    <string name="dashboard_screen_title_night">&#128075;&#127995; Good night</string>
    <string name="description_your_profile_is_incomplete">Please finish your profile to enjoy all the features of World Medical Card</string>
    <string name="diagnoses_card_title">Diagnoses</string>
    <string name="divider_or_text">Or</string>
    <string name="documents_card_title">Documents</string>
    <string name="edit_card_dialog_edit_item_title">Edit item</string>
    <string name="edit_card_dialog_remove_item_title">Remove item</string>
    <string name="edit_card_dialog_remove_items_title">Remove item(s)</string>
    <string name="edit_document_title">Edit Document</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="error_empty_response">Sorry, content is empty</string>
    <string name="error_message">Something went wrong. Please try again later.</string>
    <string name="error_no_data_found">No data found</string>
    <string name="error_no_internet">Please check internet connection</string>
    <string name="error_unauthorized">Sorry, you are not authorized to access this content</string>
    <string name="field_required_title">Field is required</string>
    <string name="forgot_password_alert_message">If the email address you provided is registered in our system, then you will get an email in short time. Please follow the instructions in the email to reset the password.</string>
    <string name="forgot_password_screen_description">Please type your email address and press the button to reset your password</string>
    <string name="forgot_password_screen_error_message">Something went wrong, please try again</string>
    <string name="forgot_password_screen_reset_password_button">Reset password</string>
    <string name="forgot_password_screen_success_title">Email sent</string>
    <string name="forgot_password_screen_title">Reset password</string>
    <string name="google_button_title">with Google</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="intro_content_description_1">Store your critical medical data in the most secure environment using WHO codes, which are readily understood by first responders worldwide.</string>
    <string name="intro_content_description_2">Your account details, along with your physical card, will ensure that you will received the correct treatment without delay - should you need medical treatment while travelling.</string>
    <string name="intro_content_description_3">You can chose to share your profile with relatives, travel partner or others you trust, so that they can be able to provide you with first line of support.</string>
    <string name="intro_content_description_4">Track and analyze health data with easy by syncing with our app.</string>
    <string name="intro_content_description_5">You can chose to share your profile with relatives, travel partner or others you trust, so that they can be able to provide you with first line of support.</string>
    <string name="intro_content_image_1">intro_image_1</string>
    <string name="intro_content_image_2">intro_image_2</string>
    <string name="intro_content_image_3">intro_image_3</string>
    <string name="intro_content_title_1">Create a Secure Account</string>
    <string name="intro_content_title_2">Travel Worry Free</string>
    <string name="intro_content_title_3">Share Your Info</string>
    <string name="intro_content_title_4">Smartwatch features</string>
    <string name="intro_content_title_5">Share Your Info</string>
    <string name="intro_number_of_pages">2</string>
    <string name="intro_content_video_1">slide_video1</string>
    <string name="intro_content_video_2">slide_video2</string>
    <string name="intro_content_video_3">slide_video3</string>
    <string name="intro_content_video_4">slide_video4</string>
    <string name="intro_content_video_5">slide_video5</string>
    <string name="landing_login_button">Login</string>
    <string name="landing_register_button">Register</string>
    <string name="login_byline">How would you like to sign-in?</string>
    <string name="login_to_wmc_title">Login to World Medical Card</string>
    <string name="maybe_later_button">Maybe later</string>
    <string name="medicine_card_title">Medicine</string>
    <string name="member_since">Member since %1$s</string>
    <string name="no_allergies_listed">No allergies listed</string>
    <string name="no_diagnoses_listed">No diagnoses listed</string>
    <string name="no_documents_added">No documents added</string>
    <string name="no_medications_listed">No medications listed</string>
    <string name="no_subscription_description">Please subscribe to a plan to enjoy all the features of World Medical Card</string>
    <string name="no_subscription_title">No Subscription</string>
    <string name="no_vaccines_listed">No vaccines listed</string>
    <string name="ok_button_title">Ok</string>
    <string name="order_now_button">Order now</string>
    <string name="order_your_card_description">Enjoy all the features of your World Medical Card from your wallet</string>
    <string name="order_your_card_title">Order your card</string>
    <string name="other_information">Other information</string>
    <string name="personal_info_byline">Please fill your personal information to create an account you can change them later.</string>
    <string name="personal_info_card_description">Allow us to get to know you better for a better experience</string>
    <string name="personal_info_card_title">Personal info</string>
    <string name="please_check_your_email_and_password">Please check your email and password</string>
    <string name="profile_birthdate">Birth date</string>
    <string name="profile_country">Country</string>
    <string name="profile_edit_alarm_phone">Alarm telephone (optional)</string>
    <string name="profile_edit_city">City</string>
    <string name="profile_edit_date_of_birth">Date of Birth</string>
    <string name="profile_edit_gender">Gender</string>
    <string name="profile_edit_cpr_number">CPR number (optional)</string>
    <string name="profile_edit_tlf_nr">Tlf.nr.</string>
    <string name="profile_edit_title_organ_donor">Would you like to be organ donor?</string>
    <string name="profile_edit_donor_note">Healthcare professionals may be required to ask family to confirm your decision</string>
    <string name="profile_edit_donor_question">Would you like to be an organ donor?</string>
    <string name="profile_edit_emergency_contacts_name">Name</string>
    <string name="profile_edit_emergency_contacts_note">Add contacts that you trust in case of an emergency.</string>
    <string name="profile_edit_emergency_contacts_phone">Phone number</string>
    <string name="profile_edit_emergency_contacts_relation">Relationship</string>
    <string name="profile_edit_first_name">First Name</string>
    <string name="profile_edit_insurance_health">Health insurance</string>
    <string name="profile_edit_insurance_note">Add insurance information for reference.</string>
    <string name="profile_edit_insurance_title">Insurance</string>
    <string name="profile_edit_insurance_travel">Travel insurance</string>
    <string name="profile_edit_insurance_type">Type of insurance</string>
    <string name="profile_edit_land">Land</string>
    <string name="profile_edit_last_name">Last Name</string>
    <string name="profile_edit_other_hint">Do you want to include other information?</string>
    <string name="profile_edit_other_title">Other</string>
    <string name="profile_edit_phone">Tlf.nr.</string>
    <string name="profile_edit_policy_number">Policy number (optional)</string>
    <string name="profile_edit_postal_address_note">Fill the address you want us to send the card to. The address will not appear on the emergency card.</string>
    <string name="profile_edit_postal_code">Postal code</string>
    <string name="profile_edit_select_birthdata">Select your date of birth</string>
    <string name="profile_edit_ssn">National ID Number (optional)</string>
    <string name="profile_edit_street_address">Street address</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_insurance_company">Insurance Company</string>
    <string name="profile_insurance_type_health">Health</string>
    <string name="profile_insurance_type_travel">Travel</string>
    <string name="register_email_field_hint">Email</string>
    <string name="register_login_forget_password_title">Forgot password?</string>
    <string name="register_password_field_hint">Password</string>
    <string name="screen_title_good_afternoon">&#128075;&#127995; Good afternoon</string>
    <string name="sign_out_button">Sign out</string>
    <string name="signin_with_google_button">Sign-in with Google</string>
    <string name="subscribe_button">Subscribe now</string>
    <string name="subscription_overview_title">My Subscriptions</string>
    <string name="terms_and_conditions_button">Terms and conditions</string>
    <string name="title_your_profile_is_incomplete">Your profile is incomplete</string>
    <string name="vaccines_card_title">Vaccines</string>
    <string name="remember_me">Remember me</string>
    <string name="create_new_account">Create a new account?</string>
    <string name="sign_up">Sign Up</string>
</resources>