<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="20dp"
        android:paddingEnd="24dp"
        android:paddingBottom="22dp"
        tools:background="@color/bottomDialogBg">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subscriptionButton"
            style="@style/App.TextButtonBottomDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subscription_overview_title"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/termsButton"
            style="@style/App.TextButtonBottomDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions_button"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signOutButton"
            style="@style/App.TextButtonBottomDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out_button"
            android:textSize="16sp" />

    </LinearLayout>
    
</layout>
