<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/login_to_wmc_title"
                    android:textColor="@color/screenTitleColor"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/registerByline"
                    style="@style/App.DescriptionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_byline"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/googleButton"
                    style="@style/App.WhiteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/signin_with_google_button"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_google_logo"
                    app:iconGravity="textStart"
                    app:iconTint="@android:color/transparent"
                    app:iconTintMode="add"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/registerByline"
                    app:rippleColor="?attr/colorControlHighlight" />

                <View
                    android:id="@+id/screenDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="64dp"
                    android:background="@color/dividerLine"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/googleButton" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/windowBackground"
                    android:paddingHorizontal="16dp"
                    android:text="@string/divider_or_text"
                    android:textAllCaps="true"
                    android:textColor="#2D333A"
                    app:layout_constraintBottom_toBottomOf="@id/screenDivider"
                    app:layout_constraintEnd_toEndOf="@id/screenDivider"
                    app:layout_constraintStart_toStartOf="@id/screenDivider"
                    app:layout_constraintTop_toTopOf="@id/screenDivider" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/App.FieldLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:hint="@string/register_email_field_hint"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/screenDivider">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmailField"
                        style="@style/App.InputField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:maxLength="100"
                        android:maxLines="1"
                        tools:text="user@server.com" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/App.FieldLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/register_password_field_hint"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/email"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userPasswordField"
                        style="@style/App.InputField"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLength="100"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/rememberMeCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@+id/rememberMeCheckBox">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans"
                        android:text="@string/create_new_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_15" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_5"
                        android:fontFamily="@font/opensans_semibold"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimaryBlue"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="22dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"
                    app:layout_constraintVertical_bias="1.0">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resetPasswordButton"
                        style="@style/App.TextNoBackgroundButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/register_login_forget_password_title"
                        android:textColor="@color/screenTitleColor"
                        android:textStyle="bold" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/loginButton"
                        style="@style/App.ButtonBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/landing_login_button" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <include
            android:id="@+id/loading"
            layout="@layout/loading_overlay"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>